<resources>
    <string name="app_name" translatable="false">Monetflash</string>
    <string name="action_settings">Settings</string>
    <string name="pay">Pay Now!</string>
    <string name="phonehint">Mobile Money number</string>
    <string name="amounttopayhint">Amount to pay (FCFA)</string>
    <string name="welcome" translatable="false">MonetFlash</string>
    <string name="app_name_label">MonetFlash - Payments</string>
    <string name="transactions">MonetFlash - Transactions</string>
    <string name="businessname">Enter the name of the Business</string>
    <string name="intro">With Monetflash, every client has a way to pay You!</string>
    <string name="Sigup">Save</string>
    <string name="numbernotavailable">Business Phone Number unavailable</string>
    <string name="startpayment">Making payment</string>
    <string name="paymentmessage">Payment request is being made. Please use your mobile and authenticate within 2 minutes. Funds may be requested by FurtherMarket</string>
    <string name="finished">Payment Status</string>
    <string name="paymentfailed">Payment Failed. %s</string>
    <string name="paymentsuccess">Payment Received Successfully</string>
    <string name="businessphone">Business phone (Mobile Money)</string>
    <string name="action_history">History</string>
    <string name="networkerror">There is no internet connection</string>
    <string name="payment_method">Select your payment method</string>
    <string name="select_momo" translatable="false">Mobile Money</string>
    <string name="select_mc" translatable="false">VISA | Master Card</string>
    <string name="paymentconsole">%s - Payment Console</string>
    <string name="comingsoon">Coming Soon</string>
    <string name="nfcnotavailable">No NFC on this device.</string>
    <string name="scan">Scan again!</string>
    <string name="scan_info">Place your NFC enabled card steadily at the back of the device.</string>
    <string name="scanning">Scanning Cards</string>
    <string name="mtnmomo">MTN MoMo</string>
    <string name="orangemo">Orange Money</string>
    <string name="creditcard">Credit/Mastercard</string>
    <string name="partners">Our Partners</string>

</resources>
