<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/common_circle_width"
    android:paddingRight="@dimen/common_circle_width"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.djlewis.monetflash.HomeActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/payment_method"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:textAlignment="center" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/buttonmtn_momo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        fancy:fb_borderColor="@color/colorPrimary"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/yellow"
        fancy:fb_focusColor="@color/yellow"
        fancy:fb_iconResource="@drawable/ic_payment_white_18dp"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/mtnmomo"
        fancy:fb_textColor="#000"
        android:layout_gravity="center_horizontal"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/buttonorange_momo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        fancy:fb_borderColor="@color/colorPrimary"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/orange"
        fancy:fb_focusColor="@color/yellow"
        fancy:fb_iconResource="@drawable/ic_payment_white_18dp"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/orangemo"
        fancy:fb_textColor="#000"
        android:layout_gravity="center_horizontal"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/buttonmastercard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        fancy:fb_borderColor="@color/colorPrimary"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPrimary"
        fancy:fb_focusColor="@color/yellow"
        fancy:fb_iconResource="@drawable/ic_payment_white_18dp"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/creditcard"
        fancy:fb_textColor="#000"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/partners"
        android:textSize="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/select_mc">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgmtn_momo"
            android:src="@drawable/mtnmomo"
            android:layout_weight="1"
            android:layout_marginRight="2dp"
            android:contentDescription="@string/select_momo" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgorange_momo"
            android:src="@drawable/omoney"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:contentDescription="@string/select_momo" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgmastercard"
            android:src="@drawable/mastercard"
            android:layout_weight="1"
            android:contentDescription="@string/select_mc" />
    </LinearLayout>

</LinearLayout>
